separated routes and controllers into its own files, fixed friggin annoying fucking motherfucking bug

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -79,7 +79,7 @@
                     <div class="site-heading">
                         <h1>Zblog</h1>
                         <hr class="small">
-                        <span class="subheading">Shit I normally say</span>
+                        <span class="subheading">Fuck off</span>
                     </div>
                 </div>
             </div>
