added angular service, made homeController pull the posts from the db and display them in the home view

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -142,6 +142,7 @@
     <script src="app.js"></script>
     <!-- inject:js -->
     <script src="scripts/controllers/HomeController.js"></script>
+    <script src="scripts/services/postService.js"></script>
     <script src="scripts/clean-blog.min.js"></script>
     <!-- endinject -->
 
