added textAngular on bower components, added new post view, controller and route with sweet ass motherfucking text editor and shit

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -17,6 +17,7 @@
 
     <!-- bower:css -->
     <link rel="stylesheet" href="/bootstrap-css/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/textAngular/dist/textAngular.css">
     <!-- endinject -->
 
     <!-- Custom Fonts -->
@@ -136,12 +137,22 @@
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/jquery/dist/jquery.js"></script>
     <script src="/bootstrap-css/js/bootstrap.min.js"></script>
+    <script src="/rangy/rangy-core.js"></script>
+    <script src="/rangy/rangy-classapplier.js"></script>
+    <script src="/rangy/rangy-highlighter.js"></script>
+    <script src="/rangy/rangy-selectionsaverestore.js"></script>
+    <script src="/rangy/rangy-serializer.js"></script>
+    <script src="/rangy/rangy-textrange.js"></script>
     <script src="/angular-momentjs/angular-momentjs.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/textAngular/dist/textAngular.js"></script>
+    <script src="/textAngular/dist/textAngular-sanitize.js"></script>
+    <script src="/textAngular/dist/textAngularSetup.js"></script>
     <!-- endinject -->
     <script src="app.js"></script>
     <!-- inject:js -->
     <script src="scripts/controllers/HomeController.js"></script>
+    <script src="scripts/controllers/NewPostController.js"></script>
     <script src="scripts/services/postService.js"></script>
     <script src="scripts/clean-blog.min.js"></script>
     <!-- endinject -->
