--- a/client/app/index.html
+++ b/client/app/index.html
@@ -18,6 +18,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="/bootstrap-css/css/bootstrap.min.css">
     <link rel="stylesheet" href="/textAngular/dist/textAngular.css">
+    <link rel="stylesheet" href="/AngularJS-Toaster/toaster.css">
     <!-- endinject -->
 
     <!-- Custom Fonts -->
@@ -70,7 +71,7 @@
         </div>
         <!-- /.container -->
     </nav>
-
+    <toaster-container toaster-options="{'close-button': true}"></toaster-container>
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
@@ -143,11 +144,13 @@
     <script src="/rangy/rangy-selectionsaverestore.js"></script>
     <script src="/rangy/rangy-serializer.js"></script>
     <script src="/rangy/rangy-textrange.js"></script>
+    <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-momentjs/angular-momentjs.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/textAngular/dist/textAngular.js"></script>
     <script src="/textAngular/dist/textAngular-sanitize.js"></script>
     <script src="/textAngular/dist/textAngularSetup.js"></script>
+    <script src="/AngularJS-Toaster/toaster.js"></script>
     <!-- endinject -->
     <script src="app.js"></script>
     <!-- inject:js -->
