--- a/client/app/index.html
+++ b/client/app/index.html
@@ -155,6 +155,7 @@
     <script src="scripts/controllers/ViewPostController.js"></script>
     <script src="scripts/services/postService.js"></script>
     <script src="scripts/clean-blog.min.js"></script>
+    <script src="scripts/ng-infinite-scroll.js"></script>
     <!-- endinject -->
 
     
