fixed buttons and text positioning

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -13,6 +13,7 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="styles/clean-blog.min.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- endinject -->
 
     <!-- bower:css -->
@@ -141,6 +142,7 @@
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/underscore/underscore.js"></script>
     <script src="/angular-underscore-module/angular-underscore-module.js"></script>
+    <script src="/lazy.js/lazy.js"></script>
     <script src="/angular-momentjs/angular-momentjs.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/textAngular/dist/textAngular.js"></script>
@@ -150,12 +152,12 @@
     <!-- endinject -->
     <script src="app.js"></script>
     <!-- inject:js -->
+    <script src="scripts/clean-blog.min.js"></script>
+    <script src="scripts/ng-infinite-scroll.js"></script>
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/NewPostController.js"></script>
     <script src="scripts/controllers/ViewPostController.js"></script>
     <script src="scripts/services/postService.js"></script>
-    <script src="scripts/clean-blog.min.js"></script>
-    <script src="scripts/ng-infinite-scroll.js"></script>
     <!-- endinject -->
 
     
