--- a/client/app/index.html
+++ b/client/app/index.html
@@ -154,6 +154,7 @@
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/NewPostController.js"></script>
     <script src="scripts/controllers/ViewPostController.js"></script>
+    <script src="scripts/services/loginService.js"></script>
     <script src="scripts/services/postService.js"></script>
     <script src="scripts/clean-blog.min.js"></script>
     <script src="scripts/ng-infinite-scroll.js"></script>
